# bible

./: .gitignore  README.md  bible-verify.nix  flake.nix  site.nix
bible-verify/: Cargo.toml  README.md  bible-verify.nix
bible-verify/src/: main.rs  test_chapter_error.json  test_duplicate_chapter.json  test_error.json  test_json_error.json  test_missing_chapter.json  types.rs  verifier.rs
site/: .gitignore  Cargo.toml  build.rs  index.html  site.nix  tailwind.config.js
site/proptest-regressions/: command_palette.txt
site/src/: bible_api.rs  chapter_view.rs  command_palette.rs  home_translation_picker.rs  keyboard_navigation.rs  main.rs  shortcuts_help.rs  sidebar.rs  translation_manager.rs  translation_storage.rs  translation_switcher.rs  translations.rs  types.rs  utils.rs  view_state.rs
site/src/api/: bible_api.rs  mod.rs
site/src/components/: command_palette.rs  cross_references_sidebar.rs  custom_translation_import.rs  mod.rs  pdf_loading_progress.rs  shortcuts_help.rs  sidebar.rs  theme_sidebar.rs  theme_switcher.rs  translation_comparison.rs  translation_switcher.rs
site/src/core/: bible_core.rs  cross_references.rs  mod.rs  types.rs
site/src/instructions/: keyboard_map.rs  keyboard_mappings.json  mod.rs  processor.rs  types.rs  vim_keys.rs
site/src/storage/: mod.rs  recent_chapters.rs  sidebar_storage.rs  translation_manager.rs  translation_storage.rs  translations.rs
site/src/themes/: amber_glow.json  arctic_ice.json  autumn_leaves.json  bubblegum_pop.json  candy_pink.json  charcoal_night.json  dark.json  (+53 more)
site/style/: output.css  tailwind.css
(+80 files in other folders)
