[package]
name = "bible-verify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bible-verify"
path = "src/verifier.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
