[package]
name = "bible"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
bincode = "1.3"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_router = "0.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
urlencoding = "2.1"
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "HtmlElement", "Navigator", "Clipboard", "console"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rexie = "0.6"
gloo-storage = "0.3.0"


[dev-dependencies]
proptest = "1.7.0"
